added more pictures of goldi

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -30,7 +30,8 @@
                 <img src="./img/1.jpg" style="width:100%">
                 <img src="./img/2.jpg" style="width:100%">
                 <img src="./img/3.jpg" style="width:100%">
-                <img src="./img/13.jpg" style="width:100%"> 
+                <img src="./img/13.jpg" style="width:100%">
+                <img src="./img/7.jpg" style="width:100%"> 
               </div>
               <div class="column">
                 <img src="./img/5.jpg" style="width:100%">
@@ -48,6 +49,7 @@
                 
                 <img src="./img/8.jpg" style="width:100%">
                 <img src="./img/11.jpg" style="width:100%">
+                <img src="./img/7.jpg" style="width:100%">
                 
               </div>
             </div>
@@ -59,7 +61,7 @@
             <h6>Answer a few basic questions.</h6>
             <h6>Then find the friend with the greatest sexibility!</h6>
             <div class="card-action">
-                <button class="btn"><i class="far fa-list-alt" style="margin-right: 5px; font-size:1rem;"></i>Take Survey</button>
+               <a href="\survey" class="btn"><i class="far fa-list-alt" style="margin-right: 5px; font-size:1rem;"></i>Take Survey</a>
             </div>
           </div>
         </div>
